Changed the title

--- a/src/app/Components/form/form.component.html
+++ b/src/app/Components/form/form.component.html
@@ -2,7 +2,7 @@
   <h1 class="text-center fw-bold my-5">We're Hiring - Angular Developer</h1>
 
   <form>
-    <section ngModelGroup="personal_information">
+    <section>
       <h2 class="mb-3">Personal Information</h2>
       <div class="row mb-4 gy-4">
         <div class="col-12 col-md-6">
@@ -140,7 +140,7 @@
 
     <hr class="my-5" />
 
-    <section ngModelGroup="address">
+    <section>
       <h2>Address</h2>
       <div class="row gy-4">
         <div class="col-12 col-md-6">
